Fixed horizontal overflow

--- a/style.css
+++ b/style.css
@@ -8,22 +8,17 @@
 }
 body {
   font-family: "Ubuntu", sans-serif;
+  /* overflow-x: hidden; */
 }
 .landing-page {
   height: 70vh;
-  background-image: url('./images/bg-pattern-intro-desktop.svg'),
-  linear-gradient(
-    to right,
-    hsl(13, 100%, 72%),
-    hsl(353, 100%, 62%)
-  )
-  ;
-  background-position: 18% center ;
+  background-image: url("./images/bg-pattern-intro-desktop.svg"),
+    linear-gradient(to right, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
+  background-position: 18% center;
   background-repeat: no-repeat;
   background-size: auto;
   color: white;
   border-bottom-left-radius: 150px;
-  
 }
 
 Nav {
@@ -125,44 +120,81 @@ li .dropdown-content a {
   background-color: hsl(353, 100%, 62%);
 }
 
-
 /*Future div*/
-.future{
-  width: 100vw;
+.future {
+  width: 100%;
   height: 100vh;
   color: hsl(208, 49%, 24%);
-  background-image: url('./images/illustration-editor-desktop.svg');
+  background-image: url("./images/illustration-editor-desktop.svg");
   background-position: 125% center;
   background-repeat: no-repeat;
   overflow: hidden;
-
+  box-sizing: border-box;
 }
-.future-title{
+.future-title {
   display: block;
   text-align: center;
   margin: 5rem auto;
   font-size: 2rem;
-  
 }
-.art-title{
+.art-title {
   font-size: 2rem;
   margin-bottom: 20px;
 }
-.articles{
+.articles {
   width: 50%;
   display: flex;
   flex-direction: column;
-  
-  
 }
 .articles article {
   margin: 60px 30%;
   width: 85%;
- 
 }
-article p{
+article p {
   font-size: 1.5rem;
   margin-top: 20px;
+}
+
+/*State*/
+.state-art {
+  width: 100%;
+  height: 70vh;
+  
+}
+.blueblack {
+  background-image: url("./images/bg-pattern-circles.svg"),
+    linear-gradient(to right, hsl(237, 17%, 21%), hsl(237, 23%, 32%));
+  width: 100%;
+  height: 60%;
+  background-repeat: no-repeat;
+  background-position: -20% 80%;
+  color: white;
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  border-top-right-radius: 75px 75px;
+  border-bottom-left-radius:150px 150px;
+  position: relative;
+ 
+}
+.blueblack article {
+  width: 30%;
+}
+/* .blueblack img{
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+} */
+
+.laptop{
+  height: 100vh;
+  width: 100%;
+  background: url('./images/illustration-laptop-desktop.svg');
+  background-repeat: no-repeat;
+  background-position: -25% center;
+
 }
 /* Fonts */
 .homelink {
